[gd_scene load_steps=34 format=3 uid="uid://bivkuhpy2ko1t"]

[ext_resource type="Script" path="res://Player/PlayerAction.gd" id="1_gfmy5"]
[ext_resource type="Texture2D" uid="uid://ba0gxox2wopob" path="res://Free/Main Characters/Virtual Guy/Idle (32x32).png" id="1_r5xou"]
[ext_resource type="Texture2D" uid="uid://d1lxvycmvbbnr" path="res://Free/Main Characters/Virtual Guy/Jump (32x32).png" id="3_2o6qk"]
[ext_resource type="Texture2D" uid="uid://bmlmlheg0qrll" path="res://Free/Main Characters/Virtual Guy/Run (32x32).png" id="4_vfwl2"]
[ext_resource type="PackedScene" uid="uid://wmehyh7qo3ay" path="res://colour_node.tscn" id="5_bn6vg"]
[ext_resource type="Script" path="res://Server/Networking.gd" id="6_eu3jg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ve6l"]
atlas = ExtResource("1_r5xou")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2eoy"]
atlas = ExtResource("1_r5xou")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pl3a"]
atlas = ExtResource("1_r5xou")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1csde"]
atlas = ExtResource("1_r5xou")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d1i0"]
atlas = ExtResource("1_r5xou")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_biwec"]
atlas = ExtResource("1_r5xou")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdaqb"]
atlas = ExtResource("1_r5xou")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cli4f"]
atlas = ExtResource("1_r5xou")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eene7"]
atlas = ExtResource("1_r5xou")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjcrp"]
atlas = ExtResource("1_r5xou")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgkil"]
atlas = ExtResource("1_r5xou")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgdro"]
atlas = ExtResource("4_vfwl2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hdwk"]
atlas = ExtResource("4_vfwl2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb8gl"]
atlas = ExtResource("4_vfwl2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re2w0"]
atlas = ExtResource("4_vfwl2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glpdi"]
atlas = ExtResource("4_vfwl2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f763a"]
atlas = ExtResource("4_vfwl2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2w8u"]
atlas = ExtResource("4_vfwl2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxxoc"]
atlas = ExtResource("4_vfwl2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_il48c"]
atlas = ExtResource("4_vfwl2")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmyd2"]
atlas = ExtResource("4_vfwl2")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2umj6"]
atlas = ExtResource("4_vfwl2")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd0st"]
atlas = ExtResource("4_vfwl2")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rfu0w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ve6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2eoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pl3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1csde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d1i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biwec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdaqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cli4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eene7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjcrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgkil")
}],
"loop": true,
"name": &"idle",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2o6qk")
}],
"loop": true,
"name": &"jump",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgdro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hdwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb8gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re2w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glpdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f763a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2w8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxxoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il48c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmyd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2umj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd0st")
}],
"loop": true,
"name": &"run",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwp73"]
size = Vector2(22, 24)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dvjj0"]
properties/0/path = NodePath(".:sync_position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:sync_velocity")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:is_processed")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:sync_direction")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:player_animation")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x84ad"]
size = Vector2(20, 2)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gfmy5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_rfu0w")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.268748

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_bwp73")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[node name="ColourNode" parent="." instance=ExtResource("5_bn6vg")]

[node name="Networking" type="Node2D" parent="."]
position = Vector2(2, 2)
script = ExtResource("6_eu3jg")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Networking"]
replication_config = SubResource("SceneReplicationConfig_dvjj0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerOnTopCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOnTopCheck"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_x84ad")
debug_color = Color(0.92549, 0.156863, 0.54902, 0.419608)

[connection signal="body_entered" from="PlayerOnTopCheck" to="." method="_on_player_on_top_check_body_entered"]
[connection signal="body_exited" from="PlayerOnTopCheck" to="." method="_on_player_on_top_check_body_exited"]
